cargo-features = ["edition"]

[package]
name = "olaf2"
version = "0.1.0"
authors = ["Sam Scott <sam.scott89@gmail.com>"]
edition = '2018'

[dependencies]
env_logger = "0.5.13"
base64 = "0.9.3"
# oauth2 = "2.0.0-alpha.2"
oauth2 = { git = "https://github.com/ramosbugs/oauth2-rs" }
rand = "0.5.5"
url = "1.7.1"
open = "1.2.2"
actix-web = "0.7.8"
reqwest = "0.9.2"
serde = "1.0.79"
serde_derive = "1.0.79"
abscissa = "0.0.4"
serde_qs = "0.4.1"
log = "0.4.5"
lazy_static = "1.1.0"
url_serde = "0.2.0"
failure = "0.1.2"
actix = "0.7.4"
toml = "0.4.7"
futures = "0.1.24"
serde_json = "1.0.31"
